<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".relatorios">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relatorios"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respons_veis"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/relatorioDps1"
        android:layout_width="370dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="120dp"
        android:background="@drawable/border"
        android:layout_marginTop="150dp"
        android:src="@drawable/resource_switch"
        android:contentDescription="@string/relatorio_dispositivo_1" />

    <TextView
        android:id="@+id/txtDp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispositivo_1"
        android:layout_marginTop="130dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/relatorioDps2"
        android:layout_width="370dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="120dp"
        android:background="@drawable/border"
        android:layout_marginTop="300dp"
        android:src="@drawable/resource_switch"
        android:contentDescription="@string/relatorio_dispositivo_2" />

    <TextView
        android:id="@+id/txtDp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispositivo_2"
        android:layout_marginTop="280dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/relatorioDps3"
        android:layout_width="370dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="120dp"
        android:background="@drawable/border"
        android:layout_marginTop="450dp"
        android:src="@drawable/resource_switch"
        android:contentDescription="@string/relatorio_dispositivo_3" />

    <TextView
        android:id="@+id/txtDp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispositivo_3"
        android:layout_marginTop="430dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"/>

</FrameLayout>