<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="principal">

    <ImageView
        android:id="@+id/configurations"
        android:layout_gravity="end"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/config"
        android:contentDescription="@string/configuracoes_do_app" />

    <ImageView
        android:id="@+id/infographs1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:background="@drawable/border"
        android:contentDescription="@string/infograficos_1"
        android:src="@drawable/lines" />

    <ImageView
        android:id="@+id/infographs2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:src="@drawable/search"
        android:contentDescription="@string/infograficos_2" />

    <ImageView
        android:id="@+id/infographs3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="505dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/planilha"
        android:contentDescription="@string/infograficos_3" />


</FrameLayout>